--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title>Hello Cousera!</title>
 </head>
 <body>
-<h1>Hellor Coursera</h1>
+<h1>Abiti</h1>
+<h2>La tienda de ropa más grande de México</h2>
 </body>
 </html>
