--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="/style/stylesheet.css" media="screen">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
+
 	<title>Abiti</title>
 </head>
 <style type="text/css">
@@ -30,23 +32,32 @@
 		color:#fef7f2;
 	}
 
-		
+}
 </style>
 <body>
 	<header>
-		<img src="abiti-logo.png" width="130" height="100" alt="Abiti-logo">
+		<img src="images/abiti-logo.png" width="70" height="60" alt="Abiti-logo">
 
-		<ul class="nav">
-		  <li><a href="#home">Home</a></li>
-		  <li><a href="#about">About Us</a></li>
-		  <li><a href="#clients">Our Clients</a></li>  
-		  <li><a href="#contact">Contact Us</a></li>
-		</ul>
+		<form style="float: none; ">
+		<input type="text" name="search" placeholder="Search..">
+		</form>
 
 	</header>
+
+	<ul class="nav">
+		  <li><a href="#home">Inicio</a></li>
+		  <li><a href="#about">Mujeres</a></li>
+		  <li><a href="#clients">Hombres</a></li>  
+		  <li><a href="#contact">Infantil</a></li>
+	</ul>
+
 	<nav>
 		
 	</nav>
 	
+	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
+
 </body>
 </html>
