--- a/index.html
+++ b/index.html
@@ -3,58 +3,21 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
 
 	<title>Abiti</title>
 </head>
-<style type="text/css">
-
-	
-	img{
-		float:left;
-		margin-left: 15px;
-		margin-top: 0px;
-	}
-
-	.title{
-		float: left;
-
-	p{
-		clear:left;
-		font-size:5px;
-		float:right;
-		margin-right: 20px;
-		color:#343332;
-	}
-
-	p:hover{
-		color:#fef7f2;
-	}
-
-}
-</style>
 <body>
-	<header>
-		<img src="images/abiti-logo.png" width="70" height="60" alt="Abiti-logo">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-lg-4">col1</div>
+			<div class="col-lg-4">col2</div>
+			<div class="col-lg-4">col3</div>
 
-		<form style="float: none; ">
-		<input type="text" name="search" placeholder="Search..">
-		</form>
-
-	</header>
-
-	<ul class="nav">
-		  <li><a href="#home">Inicio</a></li>
-		  <li><a href="#about">Mujeres</a></li>
-		  <li><a href="#clients">Hombres</a></li>  
-		  <li><a href="#contact">Infantil</a></li>
-	</ul>
-
-	<nav>
+		</div>
+	</div>
 		
-	</nav>
-	
 	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
