--- a/register.html
+++ b/register.html
@@ -2,9 +2,23 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello!</title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
 </head>
 <body>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-lg-4">col1</div>
+			<div class="col-lg-4">col2</div>
+			<div class="col-lg-4">col3</div>
+
+		</div>
+	</div>
+	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 
 </body>
 </html>
