--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<title>Abiti</title>
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row">
-			<div class="col-lg-4">col1</div>
-			<div class="col-lg-4">col2</div>
-			<div class="col-lg-4">col3</div>
+			<div class="col-md-4">col1</div>
+			<div class="col-md-4">col2</div>
+			<div class="col-md-4">col3</div>
 
 		</div>
 	</div>
