--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/stylesheet.css" media="screen">
-
+	<link rel="stylesheet" href="css/style.css" media="screen">
+	<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
 	<title>Abiti</title>
 </head>
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4">col1</div>
-			<div class="col-md-4">col2</div>
-			<div class="col-md-4">col3</div>
-
-		</div>
-	</div>
+	<header>
+		<nav id="header-nav" class="navbar navbar-default">
+			<div class="container">
+				
+			</div>
+		</nav>
+	</header>
 
 	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
